# ollama-classifier

./: .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: rtd-publish.yml
docs/: api.rst  backends.rst  changelog.rst  conf.py  index.rst  installation.rst  usage.rst
examples/: example_usage.py
src/ollama_classifier/: __init__.py  classifier.py  llm_classifier.py  prompts.py  types.py
src/ollama_classifier/backends/: __init__.py  base.py  llamacpp.py  sglang.py  vllm.py
