[project]
name = "ollama-classifier"
version = "0.2.0"
description = "A wrapper around Ollama Python SDK for text classification with constrained output and confidence scoring"
readme = "README.md"
authors = [
    {name = "Luigi Palumbo"},
    {name = "Mengting Yu"},
    {name = "Carolina Camassa"},
]
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.4.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
